# GRALE2

./: CMakeLists.txt  README.md  envvars.txt
core/: CMakeLists.txt
core/programs/: CMakeLists.txt  communicator.cpp  communicator.h  inputoutput.cpp  inputoutput.h
core/programs/mpi/: CMakeLists.txt  grale_lensplane_mpi.cpp  grale_massdens_mpi.cpp
core/programs/opencl/: CMakeLists.txt  grale_lensplane_opencl.cpp  grale_potential_opencl.cpp  ocltst.cpp  openclkernel.cpp  openclkernel.h
core/programs/openmp/: CMakeLists.txt  grale_lensplane_openmp.cpp  grale_massdens_openmp.cpp
core/programs/threads/: CMakeLists.txt  grale_lensplane_threads.cpp  grale_massdens_threads.cpp
core/src/: CMakeLists.txt
core/src/cosmology/: cosmology.cpp  cosmology.h
core/src/galens/: deparameters.cpp  deparameters.h  eaparameters.cpp  eaparameters.h  gaparameters.cpp  gaparameters.h  grid.cpp  grid.h  gridlensinversionparameters.cpp  gridlensinversionparameters.h  lensgaconvergenceparameters.cpp  lensgaconvergenceparameters.h  lensgamultipopulationparameters.cpp  lensgamultipopulationparameters.h  lensinversionbasislensinfo.cpp  lensinversionbasislensinfo.h  lensinversionparametersbase.h  lensinversionparametersmultiplanegpu.cpp  lensinversionparametersmultiplanegpu.h  lensinversionparametersparametricsingleplane.cpp  lensinversionparametersparametricsingleplane.h  lensinversionparameterssingleplanecpu.cpp  lensinversionparameterssingleplanecpu.h  mcmcparameters.cpp  mcmcparameters.h  nsga2parameters.cpp  nsga2parameters.h  parameterprior.cpp  parameterprior.h  retraceparameters.cpp  retraceparameters.h  rndparameters.cpp  rndparameters.h  scalesearchparameters.cpp  scalesearchparameters.h
core/src/general/: configurationparameters.cpp  configurationparameters.h  constants.h  debugnew.cpp  debugnew.h  graleconfig.h.in  gslcblasdummy.cpp  log.cpp  log.h  pernodecounter.cpp  pernodecounter.h  utils.h
core/src/image/: imageplane.cpp  imageplane.h  imagesdata.cpp  imagesdata.h  imagesdataextended.cpp  imagesdataextended.h  lensplane.cpp  lensplane.h  multiplanecuda.cpp  multiplanecuda.h
core/src/lens/: alphapotlens.cpp  alphapotlens.h  circularlensprofile.h  circularpieceslens.cpp  circularpieceslens.h  compositelens.cpp  compositelens.h  cubicdeflectiongridlens.cpp  cubicdeflectiongridlens.h  cubicinterpolationgrid.cpp  cubicinterpolationgrid.h  deflectiongridlens.cpp  deflectiongridlens.h  elliptichernquistlens.cpp  elliptichernquistlens.h  ellipticlens.cpp  ellipticlens.h  ellipticnfwlens.cpp  ellipticnfwlens.h  ellipticsersiclens.cpp  ellipticsersiclens.h  externalshearlens.cpp  externalshearlens.h  gausslens.cpp  gausslens.h  gausslensinfo.h  gravitationallens.cpp  gravitationallens.h  harmoniclens.cpp  harmoniclens.h  hernquistlens.cpp  hernquistlens.h  massdisklens.cpp  massdisklens.h  masssheetlens.cpp  masssheetlens.h  multiplanecontainer.cpp  multiplanecontainer.h  multiplegausslens.cpp  multiplegausslens.h  (+39 more)
core/src/math/: contourfinder.cpp  contourfinder.h  discretefunction.h  gridfunction.cpp  gridfunction.h  line2d.h  mathfunctions.h  polygon2d.h  real1dfunction.h  real1dfunctionintegrator.cpp  real1dfunctionintegrator.h  real2dderivablefunction.h  real2dfunction.h  rectangle2d.h  triangle2d.h  triangleindices.h  vector2d.h
core/src/opencl/: oclutils.h  opencl_xoshiro128plus.cpp  opencl_xoshiro128plus.h  openclkernel.cpp  openclkernel.h  opencllibrary.cpp  opencllibrary.h  openclmultikernel.h
core/src/source/: circularsource.cpp  circularsource.h  discretesource.cpp  discretesource.h  ellipticalsource.cpp  ellipticalsource.h  pointsource.cpp  pointsource.h  polygonsource.cpp  polygonsource.h  sourceimage.cpp  sourceimage.h
inversion/: CMakeLists.txt  TODO
inversion/programs/: CMakeLists.txt  commonga.h  inversioncommunicator.cpp  inversioncommunicator.h  inversioncommunicatornewga.cpp  inversioncommunicatornewga.h
inversion/programs/clientserver/: CMakeLists.txt  grale_invert_clientserver.cpp
inversion/programs/eatk/: CMakeLists.txt  ea.h  exchange.h  freeforminversioncommunicator.h  grale_invert_jade.cpp  grale_invert_newga.cpp  grale_invert_newgampi.cpp  (+13 more)
inversion/src/: CMakeLists.txt
inversion_modules/: CMakeLists.txt
inversion_modules/cmake/: Macros.cmake
inversion_modules/src/: fitnesscomponent.cpp  fitnesscomponent.h  fitnesscomponent_caustic.cpp  fitnesscomponent_caustic.h  fitnesscomponent_defl.cpp  fitnesscomponent_defl.h  fitnesscomponent_dens.cpp  fitnesscomponent_dens.h  fitnesscomponent_null.cpp  fitnesscomponent_null.h  fitnesscomponent_overlap.cpp  fitnesscomponent_overlap.h  fitnesscomponent_time.cpp  fitnesscomponent_time.h  fitnesscomponent_weak.cpp  fitnesscomponent_weak.h  fitnessutil.cpp  fitnessutil.h  fitnessutil_caustic.cpp  fitnessutil_dens.cpp  fitnessutil_null.cpp  fitnessutil_overlap.cpp  fitnessutil_time.cpp  fitnessutil_weak.cpp  lensfitnessextendedweak.cpp  lensfitnessextendedweak.h  lensfitnessgeneral.cpp  lensfitnessgeneral.h  lensfitnessj1004.cpp  lensfitnessj1004.h  lensfitnesspointoverlap.cpp  lensfitnesspointoverlap.h  lensfitnesspointoverlapweak.cpp  lensfitnesspointoverlapweak.h  lensfitnesssimplerectangles.h  lensfitnessweak.cpp  lensfitnessweak.h  numericgradientcalculator.cpp  numericgradientcalculator.h  pointgroupstorage.cpp  (+1 more)
inversion_modules/tests/: CMakeLists.txt  bayeswlcheck.cpp  experimentaltdcheck.cpp  experimentaltdcheck2.cpp  experimentaltdcheck_plot.py  genometest.cpp  invtest.py  invtestbasisfunctions.py  reallens_nosheet.lensdata  reltdcheck.cpp  reltdcheck_plot.py
tests/: CMakeLists.txt  backproject.cpp  configparamstest.cpp  configparamstest.py  cosmcheck.cpp  cosmcheckgen.py  discretefunction.cpp  genometest.cpp  genometest_input.ipynb  imgdatatest.cpp  imgdatdump.cpp  invtest.py  invtestbasisfunctions.py  mpcu.cpp  mpcu.py  mpcubp.cpp  mpcubp_generated.h  mpcubpgen.py  mppopcalc.cpp  oclmpdevel.py  oclmpdevel2.py  parametric_ideas.json  paramtest.cpp  paramtest.py  pernodecounttest.cpp  pointoffsettest.cpp  precalcbackproj.cpp  rngasserttest.cpp
tests/parametric/: paramtest.cpp  retracetest.cpp
(+490 files in other folders)
