set(GRALE_EXTERNAL_INCLUDES "")
set(GRALE_INTERNAL_INCLUDES "")
set(GRALE_LINK_LIBS "")

add_additional_stuff(CORE GRALE_EXTERNAL_INCLUDES GRALE_LINK_LIBS)

find_package(ErrUt REQUIRED)
list(APPEND GRALE_EXTERNAL_INCLUDES "${ERRUT_INCLUDE_DIRS}")
list(APPEND GRALE_LINK_LIBS "${ERRUT_LIBRARIES}")

find_package(SerUt REQUIRED)
list(APPEND GRALE_EXTERNAL_INCLUDES "${SERUT_INCLUDE_DIRS}")
list(APPEND GRALE_LINK_LIBS "${SERUT_LIBRARIES}")

find_package(GSL REQUIRED)
list(APPEND GRALE_EXTERNAL_INCLUDES "${GSL_INCLUDE_DIR}")
list(APPEND GRALE_LINK_LIBS ${GSL_LIBRARIES})
list(APPEND GRALE_LINK_LIBS ${GSLCBLAS_LIBRARIES})

if (NOT MSVC OR GRALE_COMPILE_STATIC)
	set(GRALE_IMPORT "")
	set(GRALE_EXPORT "")
else (NOT MSVC OR GRALE_COMPILE_STATIC)
	set(GRALE_IMPORT "__declspec(dllimport)")
	set(GRALE_EXPORT "__declspec(dllexport)")
endif (NOT MSVC OR GRALE_COMPILE_STATIC)

configure_file("${PROJECT_SOURCE_DIR}/core/src/general/graleconfig.h.in" "${PROJECT_BINARY_DIR}/core/src/general/graleconfig.h")

list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_BINARY_DIR}/core/src/general")
list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/core/src/general")
list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/core/src/image")
list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/core/src/lens")
list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/core/src/math")
list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/core/src/source")
list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/core/src/galens")
list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/core/src/thirdparty/WildMagic5")
list(APPEND GRALE_INTERNAL_INCLUDES "${PROJECT_SOURCE_DIR}/core/src/")

add_subdirectory(src)
add_subdirectory(programs)

if (NOT MSVC)
	set(GRALE_LIBS "-L${LIBRARY_INSTALL_DIR}" "-lgrale2core")
else (NOT MSVC)
	set(GRALE_LIBS optimized "${LIBRARY_INSTALL_DIR}/grale2core.lib" 
		       debug "${LIBRARY_INSTALL_DIR}/grale2core_d.lib")
endif (NOT MSVC)

set(GRALE_INCDIRS ${GRALE_EXTERNAL_INCLUDES} ${CMAKE_INSTALL_PREFIX}/include)
set(GRALE_LIBS ${GRALE_LIBS} ${GRALE_LINK_LIBS})

remove_empty(GRALE_INCDIRS)
list(REMOVE_DUPLICATES GRALE_INCDIRS)
remove_empty(GRALE_LIBS)

foreach(ARG ${GRALE_LIBS})
	set(GRALECORE_LIBS_CMAKECONFIG "${GRALECORE_LIBS_CMAKECONFIG} \"${ARG}\"")
endforeach()
foreach(ARG ${GRALE_INCDIRS})
	set(GRALECORE_INCDIRS_CMAKECONFIG "${GRALECORE_INCDIRS_CMAKECONFIG} \"${ARG}\"")
endforeach()

configure_file("${PROJECT_SOURCE_DIR}/cmake/GRALECOREConfig.cmake.in" "${PROJECT_BINARY_DIR}/cmake/GRALECOREConfig.cmake")
install(FILES "${PROJECT_BINARY_DIR}/cmake/GRALECOREConfig.cmake" DESTINATION ${LIBRARY_INSTALL_DIR}/cmake/GRALECORE)


